# hub-core

./: .env  .gitignore  .rustfmt.toml  Cargo.toml  Dockerfile  README.md  credits-test.toml  docker-compose.yml  install-proto  redpanda-stop.sh  redpanda.sh  start-developing.sh
.github/workflows/: main.yml
crates/core/: Cargo.toml
crates/core-build/: Cargo.toml
crates/core-build/src/: lib.rs
crates/core-macros/: Cargo.toml
crates/core-macros/src/: lib.rs  triage.rs
crates/core-schemas/: Cargo.toml  proto.toml
crates/core-schemas/src/: lib.rs
crates/core/src/: assets.rs  consumer.rs  credits.rs  lib.rs  metrics.rs  producer.rs  triage.rs  util.rs
crates/core/src/util/: evm_addr.rs  validate_addr.rs
crates/test/: Cargo.toml  build.rs  proto.toml
crates/test/src/: main.rs  test.proto
scripts/: check-all.sh  check-features.sh
scripts/git-hooks/: pre-commit  pre-push
