[package]
name = "holaplex-hub-core-macros"
version = "0.1.0"
authors = [
  "Holaplex <engineering@holaplex.com>",
]
edition = "2021"
description = "Proc-macros for holaplex-hub-core"
readme = "../../README.md"
license = "AGPL-3.0-or-later"
keywords = ["solana", "holaplex", "web3"]
categories = ["cryptography::cryptocurrencies", "web-programming"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.66"
quote = "1.0.32"
syn = { version = "2.0.27", features = ["extra-traits", "fold", "full"] }
thiserror = "1.0.44"
