[package]
name = "holaplex-hub-core"
version = "0.1.0"
authors = [
  "Holaplex <engineering@holaplex.com>",
]
edition = "2021"
description = "Core components for the holaplex-hub family of crates"
readme = "../../README.md"
license = "AGPL-3.0-or-later"
keywords = ["solana", "holaplex", "web3"]
categories = ["cryptography::cryptocurrencies", "web-programming"]

[features]
kafka = ["rdkafka"]

[dependencies]
anyhow = "1.0.66"
async-trait = "0.1.60"
clap = { version = "4.0.29", features = ["env", "derive", "cargo"] }
dotenv = "0.15.0"
futures-util = "0.3.25"
hostname = "0.3.1"
num_cpus = { version = "1.15.0" }
pin-project-lite = "0.2.9"
prost = "0.11.5"
prost-types = "0.11.5"
rdkafka = { version = "0.29.0", features = ["zstd", "ssl", "sasl"], optional = true }
thiserror = "1.0.38"
tokio = { version = "1.23.0", features = ["rt-multi-thread", "parking_lot"] }
tracing = "0.1.37"
tracing-loki = { version = "0.2.1" }
tracing-subscriber = { version = "0.3.16", features = ["fmt", "env-filter", "tracing-log"] }
url = "2.3.1"
