[package]
name = "holaplex-hub-core"
version = "0.5.6"
authors = [
  "Holaplex <engineering@holaplex.com>",
]
edition = "2021"
description = "Core components for the holaplex-hub family of crates"
readme = "../../README.md"
repository = "https://github.com/holaplex/hub-core"
license = "AGPL-3.0-or-later"
keywords = ["solana", "holaplex", "web3"]
categories = ["cryptography::cryptocurrencies", "web-programming"]

[features]
asset_proxy = ["strum", "cid"]
credits = ["kafka_internal", "rand", "strum", "toml"]
kafka = ["kafka_internal"]
kafka_internal = ["rdkafka"]
solana = ["solana-client", "solana-sdk"]
metrics = ["opentelemetry",  "opentelemetry_sdk", "opentelemetry-prometheus", "prometheus"]

[dependencies]
anyhow = "1.0.66"
async-trait = "0.1.60"
backon = "0.4.1"
bs58 = "0.5.0"
chrono = "0.4.23"
cid = { version = "0.10.1", optional = true }
clap = { version = "4.2.7", features = ["env", "derive", "cargo"] }
dotenv = "0.15.0"
futures-util = "0.3.25"
hostname = "0.3.1"
jsonrpsee-core = { version = "0.19.0", optional = true }
num_cpus = { version = "1.15.0" }
pin-project-lite = "0.2.9"
prost = "0.11.5"
prost-types = "0.11.5"
rand = { version = "0.8.5", optional = true }
rdkafka = { version = "0.29.0", features = ["zstd", "ssl", "sasl"], optional = true }
reqwest = { version = "0.11.14", features = ["json"] }
sea-orm = { version = "0", optional = true }
serde_json = "1.0.91"
serde_with = { version = "2.2.0", features = ["base64", "hex"] }
solana-client = { version = "1", optional = true }
solana-sdk = { version = "1", optional = true }
strum = { version = "0.24.1", optional = true, features = ["derive"] }
thiserror = "1.0.38"
tokio = { version = "1.23.0", features = ["macros", "rt-multi-thread", "parking_lot"] }
toml = { version = "0.7.3", optional = true }
tracing = "0.1.37"
tracing-loki = { version = "0.2.1" }
tracing-subscriber = { version = "0.3.16", features = ["fmt", "env-filter", "tracing-log"] }
url = "2.3.1"
uuid = "1.2.2"
opentelemetry = { version = "0.20", features = ["metrics", "rt-tokio"], optional = true}
opentelemetry-prometheus = { version = "0.13.0", optional = true}
opentelemetry_sdk = { version = "0.20.0", optional = true}
prometheus = { version = "0.13.3", optional = true}

[dependencies.hub-core-macros]
package = "holaplex-hub-core-macros"
path = "../core-macros"

[dependencies.hub-core-schemas]
package = "holaplex-hub-core-schemas"
path = "../core-schemas"
