[package]
name = "holaplex-hub-test"
version = "0.1.0"
authors = [
  "Holaplex <engineering@holaplex.com>",
]
edition = "2021"
publish = false
license = "AGPL-3.0-or-later"

build = "build.rs"

[dependencies]
prost = "0.11.5"

[dependencies.hub-core]
package = "holaplex-hub-core"
path = "../core"
features = ["kafka"]

[build-dependencies.hub-core-build]
package = "holaplex-hub-core-build"
path = "../core-build"
